# vertica-hyperloglog

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE-2.0.txt  NOTICE  README.md  itestd.sv.conf  makefile  rpmbuild.spec
SOURCES/: CMakeLists.txt  Dockerfile  install.sql
SOURCES/include/: bias_corrected_estimate.hpp  druid_precalc_lookups.hpp  hll.hpp  hll_druid.hpp  hll_raw.hpp  hll_utils.hpp  hll_vertica.hpp  linear_counting.hpp  murmur3_hash.hpp  murmur_hash.hpp
SOURCES/include/hll-criteo/: hll.hpp  hll_raw.hpp  hll_vertica.hpp  linear_counting.hpp  murmur_hash.hpp
SOURCES/src/: HllCombine.cpp  HllCreateSynopsis.cpp  HllDistinctCount.cpp  HllDruidCombine.cpp  HllDruidCreateSynopsis.cpp  HllDruidDistinctCount.cpp  HllJava.cpp  LogLogBetaDistinctCount.cpp  Makefile.standalone  bias_corrected_estimate.cpp  hll.hpp  hll_druid.cpp  hll_raw.hpp  hll_vertica.cpp  linear_counting.cpp
SOURCES/src/hll-criteo/: HllCombine.cpp  HllCreateSynopsis.cpp  HllDistinctCount.cpp  HllJava.cpp  LogLogBetaDistinctCount.cpp  bias_corrected_estimate.cpp  hll_vertica.cpp  linear_counting.cpp  murmur3_hash.cpp
SOURCES/tests/: base_test.hpp  bias_correction_test.cpp  data_gen.cpp  hll_benchmark.cpp  hll_driver.cpp  hll_druid_driver.cpp  hll_druid_test.cpp  hll_raw_test.cpp  hll_test.cpp  hll_utils_test.cpp  linear_counting_test.cpp
SOURCES/tests/hll-criteo/: bias_correction_test.cpp  data_gen.cpp  hll_benchmark.cpp  hll_driver.cpp  hll_raw_test.cpp  hll_test.cpp  linear_counting_test.cpp
SOURCES/tests/integration/: 01_install_library.sql  02_install_hll_create_synopsis.sql  03_install_hll_distinct_count.sql  04_nested_call.sql  05_import_data.sh  check_error.py  run_tests.sh
SPECS/: vertica-udfs.spec
data/: visits.csv
include/: hll_vertica.hpp  linear_counting.hpp
src/: Hll.cpp  Hll.h  Hll.hpp  HllCreateSynopsis.cpp  HllDistinctCount.cpp  bias_corrected_estimate.cpp  hll.hpp  hll_raw.hpp  hll_vertica.cpp  linear_counting.cpp  murmur_hash.hpp
src/main/cpp/hlllib/: Hll.cpp  HllCreateSynopsis.cpp  HllDistinctCount.cpp  install.sql
tests/: bias_correction_test.cpp  hll_driver.cpp  hll_raw_test.cpp  hll_test.cpp  linear_counting_test.cpp
tests/integration/: 06_create_hll.sql  07_check_error.sh  1_install_library.sql  2_install_hll_create_synopsis.sql  3_install_hll_distinct_count.sql  4_nested_call.sql  run_tests.sh
